created design system
1. Added global styles for reusable components
2. Styles for fonts, spacers, radius, and texts
3. Added icons

--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,10 @@
     "options_page": "src/index.html",
     "content_security_policy": {
         "extension_pages": "script-src 'self'; object-src 'self'"
+    },
+    "icons": {
+        "16": "assets/logo-16.png",
+        "48": "assets/logo-48.png",
+        "128": "assets/logo-128.png"
     }
 }
