--- a/.github/workflows/ui_tests.yaml
+++ b/.github/workflows/ui_tests.yaml
@@ -20,15 +20,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps
+      - name: Install Chromium for Playwright
+        run: npx playwright install chromium
+
+      - name: Run Playwright tests
+        run: npx playwright test --project=chromium
 
       - name: Run Playwright tests
         run: npx playwright test
-
-      - name: Upload Playwright report
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: playwright-report
-          path: playwright-report
